--- a/springboot2-essentials/pom.xml
+++ b/springboot2-essentials/pom.xml
@@ -100,6 +100,11 @@
             <artifactId>springdoc-openapi-security</artifactId>
             <version>${springdoc-openapi-ui.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <profiles>
