:memo: update application.yml.example

--- a/springboot2-essentials/src/main/resources/application.yml.example
+++ b/springboot2-essentials/src/main/resources/application.yml.example
@@ -9,3 +9,12 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+
+security:
+  default-password: password
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
